adicionado pagina de solicitações

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
+            <img src="img/logo.png" alt="">
             <h1 class="mb-5">Prefeitura Municipal de Florianópolis</h1>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
@@ -50,39 +51,33 @@
     <section class="features-icons bg-light text-center">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4">
+          <a href="pages/solicitacao.html" class="col-lg-4 card" style="text-decoration: none;">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-              <a href="">
                 <div class="features-icons-icon d-flex">
                   <i class="icon-screen-desktop m-auto text-primary"></i>
                 </div>
-              </a>
               <h3>Solicitações</h3>
               <p class="lead mb-0">Solicite obras, alvarás e segunda via de documentos</p>
             </div>
-          </div>
-          <div class="col-lg-4">
+          </a>
+          <a href="pages/solicitacao.html" class="col-lg-4 card" style="text-decoration: none;">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-              <a href="">
                 <div class="features-icons-icon d-flex">
                   <i class="icon-layers m-auto text-primary"></i>
                 </div>
-              </a>
               <h3>Consultas</h3>
               <p class="lead mb-0">Faça suas consultas e forma fácil e rápida aqui</p>
             </div>
-          </div>
-          <div class="col-lg-4">
+          </a>
+          <a href="pages/solicitacao.html" class="col-lg-4 card" style="text-decoration: none;">
             <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-
                 <div class="features-icons-icon d-flex" >
                   <i class="icon-check m-auto text-primary"></i>
                 </div>
-              </a>
               <h3>Informações</h3>
               <p class="lead mb-0">Obtenha informações sobre a cidade e sobre o que a prefeitura esta fazendo</p>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </section>
@@ -125,7 +120,6 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
               <h5>Margaret E.</h5>
               <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
             </div>
