--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <p class="lead mb-0">Solicite obras, alvarás e segunda via de documentos</p>
             </div>
           </a>
-          <a href="pages/solicitacao.html" class="col-lg-4 card" style="text-decoration: none;">
+          <a href="pages/consultas.html" class="col-lg-4 card" style="text-decoration: none;">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                 <div class="features-icons-icon d-flex">
                   <i class="icon-layers m-auto text-primary"></i>
