Mudei a cor do texto do header pra branco

--- a/pages/consultas.html
+++ b/pages/consultas.html
@@ -32,10 +32,10 @@
   <nav class="navbar navbar-light bg-dark static-top" style="height:80px">
     <div class="container">
       <div align="left">
-        <a href="../index.html">
-          <i class="icon-arrow-left text-primary"></i>Voltar</a>
+        <a href="../index.html" class="header-text">
+          <i class="icon-arrow-left"></i>Voltar</a>
       </div>
-      <h3 class="text-primary">Consultas</h3>
+      <h3 class="header-text">Consultas</h3>
       <div></div>
 
     </div>
