--- a/pages/consultas.html
+++ b/pages/consultas.html
@@ -47,12 +47,12 @@
 
       <!-- row one -->
       <div class="row">
-        <a href="#" class="col-lg-4 card" style="text-decoration: none;">
+        <a href="./negativa-debito.html" class="col-lg-4 card" style="text-decoration: none;">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
               <i class="icon-credit-card m-auto text-primary"></i>
             </div>
-            <h3>Solicitações</h3>
+            <h3>Certidão Negativa - Pessoa Física</h3>
             <p class="lead mb-0">Consulte obras, alvarás e segunda via de documentos</p>
           </div>
         </a>
