--- a/pages/negativa-debito.html
+++ b/pages/negativa-debito.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
   <!-- Custom styles for this template -->
-  <link href="../css/landing-page.min.css" rel="stylesheet">
+  <link href="../css/landing-page.css" rel="stylesheet">
   <link href="../css/consultas.css" rel="stylesheet">
   <!-- <link href="../css/agency.min.css" rel="stylesheet"> -->
 
@@ -41,12 +41,9 @@
   </nav>
 
   <!-- Icons Grid -->
-  <section>
-    <div class="left-menu float-left col-md-3">
-      <svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-        <path d="M448 75.2v361.7c0 24.3-19 43.2-43.2 43.2H43.2C19.3 480 0 461.4 0 436.8V75.2C0 51.1 18.8 32 43.2 32h361.7c24 0 43.1 18.8 43.1 43.2zm-37.3 361.6V75.2c0-3-2.6-5.8-5.8-5.8h-9.3L285.3 144 224 94.1 162.8 144 52.5 69.3h-9.3c-3.2 0-5.8 2.8-5.8 5.8v361.7c0 3 2.6 5.8 5.8 5.8h361.7c3.2.1 5.8-2.7 5.8-5.8zM150.2 186v37H76.7v-37h73.5zm0 74.4v37.3H76.7v-37.3h73.5zm11.1-147.3l54-43.7H96.8l64.5 43.7zm210 72.9v37h-196v-37h196zm0 74.4v37.3h-196v-37.3h196zm-84.6-147.3l64.5-43.7H232.8l53.9 43.7zM371.3 335v37.3h-99.4V335h99.4z"
-        />
-      </svg>
+  <section class="height-700">
+    <div class="left-menu float-left col-md-3 height-700">
+      <div class="note-icon" style="background-image: url('../img/note-icon.png');"></div>
       <div class="menu-text">
         <p>
           A Certidão Negativa de Débitos (CND) é um documento emitido pela Fazenda Municipal que atesta que o contribuinte está em
@@ -61,6 +58,23 @@
         </div>
         <button type="submit" class="btn btn-default">Consultar CPF</button>
       </form>
+
+      <div class="sub-text-menu">
+        <p style="text-align:justify;">
+          Caso ocorra algum erro na emissão da Certidão, procure a unidade de atendimento central ou a unidade de atendimento do continente
+          do Pró-cidadão para verificar e corrigir o problema que impediu a geração do documento. Para garantir a segurança
+          das informações, a Certidão não será emitida caso os dados do contribuinte estejam incorretos ou incompletos ou
+          ainda quando houver choque de homônimos.
+        </p>
+        <p>
+          Clique
+          <a href="http://www.pmf.sc.gov.br/receita/cnd/_mais_informacoes/mais_informacoes.php" target="_parent">
+            <b>aqui</b>
+          </a>
+          para acessar os endereços, telefones e horários de atendimento de cada unidade do Pró-cidadão
+        </p>
+
+      </div>
     </div>
 
     <div class="features-icons float-left col-md-9">
