--- a/pages/negativa-debito.html
+++ b/pages/negativa-debito.html
@@ -55,7 +55,7 @@
       <form class="form-left-menu">
         <div class="form-group">
           <label for="cpf" class="font-weight-bold">CPF</label>
-          <input id="cpf" type="text" class="form-control" placeholder="Digite apenas os 11 números">
+          <input id="cpf" maxlength="14" type="text" class="form-control" placeholder="Digite apenas os 11 números" onkeyup="cpfMask()">
         </div>
         <button type="submit" class="btn btn-default text-uppercase">Gerar Certidão</button>
       </form>
@@ -134,6 +134,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="../vendor/jquery/jquery.min.js"></script>
   <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../js/masks.js"></script>
 
 </body>
 
