--- a/pages/consultas.html
+++ b/pages/consultas.html
@@ -56,7 +56,7 @@
             <p class="lead mb-0">Consulte obras, alvarás e segunda via de documentos</p>
           </div>
         </a>
-        <a href="#" class="col-lg-4 card" style="text-decoration: none;">
+        <a href="./negativa-debito.html" class="col-lg-4 card" style="text-decoration: none;">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
               <i class="icon-calculator m-auto text-primary"></i>
@@ -65,7 +65,7 @@
             <p class="lead mb-0">Faça suas consultas e forma fácil e rápida aqui</p>
           </div>
         </a>
-        <a href="#" class="col-lg-4 card" style="text-decoration: none;">
+        <a href="./negativa-debito.html" class="col-lg-4 card" style="text-decoration: none;">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
               <i class="icon-note m-auto text-primary"></i>
@@ -87,7 +87,7 @@
             <p class="lead mb-0">Solicite obras, alvarás e segunda via de documentos</p>
           </div>
         </a>
-        <a href="#" class="col-lg-4 card" style="text-decoration: none;">
+        <a href="./negativa-debito.html" class="col-lg-4 card" style="text-decoration: none;">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
               <i class="icon-docs m-auto text-primary"></i>
@@ -96,7 +96,7 @@
             <p class="lead mb-0">Faça suas consultas e forma fácil e rápida aqui</p>
           </div>
         </a>
-        <a href="#" class="col-lg-4 card" style="text-decoration: none;">
+        <a href="./negativa-debito.html" class="col-lg-4 card" style="text-decoration: none;">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
               <i class="icon-notebook m-auto text-primary"></i>
