--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <form>
               <div align="center">
-                  <input type="text" class="form-control form-control-lg" placeholder="Buscar">
+                  <input id="pesquisa" type="text" class="form-control form-control-lg" placeholder="Buscar">
                   <br>
-                  <a href="#" class="btn btn-block btn-lg btn-primary">Buscar</a>
+                  <a href="#" class="btn btn-block btn-lg btn-primary" onclick="pesquisar()">Buscar</a>
               </div>
             </form>
           </div>
@@ -200,6 +200,8 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="js/pesquisa.js"></script>
+
 
   </body>
 
