--- a/pages/consultas.html
+++ b/pages/consultas.html
@@ -46,7 +46,7 @@
     <div class="container">
 
       <!-- row one -->
-      <div class="row">
+      <div class="row row-1">
         <a href="./negativa-debito.html" class="col-lg-4 card" style="text-decoration: none;">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
