--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <p class="lead mb-0">Faça suas consultas e forma fácil e rápida aqui</p>
             </div>
           </a>
-          <a href="pages/solicitacao.html" class="col-lg-4 card" style="text-decoration: none;">
+          <a href="pages/informacoes.html" class="col-lg-4 card" style="text-decoration: none;">
             <div class="features-icons-item mx-auto mb-0 mb-lg-3">
                 <div class="features-icons-icon d-flex" >
                   <i class="icon-check m-auto text-primary"></i>
@@ -107,7 +107,7 @@
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/Construction-1.jpg');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
             <h2>Easy to Use &amp; Customize</h2>
-            <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+            <p class="lead mb-0 ">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
           </div>
         </div>
       </div>
