feito tela de solicitaçao de pavimentação de rua e alterado os ícones e texto das telas de seleção

--- a/pages/solicitacoes.html
+++ b/pages/solicitacoes.html
@@ -20,6 +20,7 @@
 
     <!-- Custom styles for this template -->
     <link href="../css/landing-page.css" rel="stylesheet">
+    <link href="../css/consultas.css" rel="stylesheet">
     <!-- <link href="../css/agency.min.css" rel="stylesheet"> -->
 
 
@@ -31,78 +32,77 @@
     <nav class="navbar navbar-light bg-dark static-top" style="height:80px">
       <div class="container">
         <div align="left">
-          <a href="../index.html"><i class="icon-arrow-left text-primary"></i> Voltar</a>
+          <a href="../index.html" class="header-text">
+            <i class="icon-arrow-left"></i>Voltar</a>
         </div>
-        <h3 class="text-primary">Solicitações</h3>
+        <h3 class="header-text">Solicitações</h3>
         <div></div>
 
       </div>
     </nav>
-
-
 
     <!-- Icons Grid -->
     <section class="features-icons bg-light text-center">
       <div class="container">
 
         <!-- row one -->
-        <div class="row">
-          <a href="pages/solicitacao.html" class="col-lg-4 card" style="text-decoration: none;">
+        <div class="row row-1">
+          <a href="./pavimentacao-rua.html" class="col-lg-4 card" style="text-decoration: none;">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                <div class="features-icons-icon d-flex">
-                  <i class="icon-screen-desktop m-auto text-primary"></i>
-                </div>
-              <h3>Solicitações</h3>
-              <p class="lead mb-0">Solicite obras, alvarás e segunda via de documentos</p>
+              <div class="features-icons-icon d-flex">
+                <i class="icon-wrench m-auto text-primary"></i>
+              </div>
+              <h3>Pavimentação de rua</h3>
+              <p class="lead mb-0">Solicite a pavimentação ou melhoria da sua rua</p>
             </div>
           </a>
           <a href="#" class="col-lg-4 card" style="text-decoration: none;">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                <div class="features-icons-icon d-flex">
-                  <i class="icon-layers m-auto text-primary"></i>
-                </div>
-              <h3>Consultas</h3>
-              <p class="lead mb-0">Faça suas consultas e forma fácil e rápida aqui</p>
+              <div class="features-icons-icon d-flex">
+                <i class="icon-anchor m-auto text-primary"></i>
+              </div>
+              <h3>Alvarás</h3>
+              <p class="lead mb-0">Faça a emissão do seu alvará (funcionamento, sanitário, construção, etc)</p>
             </div>
           </a>
           <a href="#" class="col-lg-4 card" style="text-decoration: none;">
             <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-                <div class="features-icons-icon d-flex" >
-                  <i class="icon-check m-auto text-primary"></i>
-                </div>
-              <h3>Informações</h3>
-              <p class="lead mb-0">Obtenha informações sobre a cidade e sobre o que a prefeitura esta fazendo</p>
+              <div class="features-icons-icon d-flex">
+                <i class="icon-docs m-auto text-primary"></i>
+              </div>
+              <h3>Segunda via</h3>
+              <p class="lead mb-0">Emita a segunda via da taxa de IPTU, coleta de lixo ou de laudos de análise de projeto</p>
             </div>
           </a>
         </div>
 
         <!-- row two -->
         <div class="row">
-          <a href="pages/solicitacao.html" class="col-lg-4 card" style="text-decoration: none;">
+          <a href="#" class="col-lg-4 card" style="text-decoration: none;">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                <div class="features-icons-icon d-flex">
-                  <i class="icon-screen-desktop m-auto text-primary"></i>
-                </div>
-              <h3>Solicitações</h3>
-              <p class="lead mb-0">Solicite obras, alvarás e segunda via de documentos</p>
+              <div class="features-icons-icon d-flex">
+                <i class="icon-magnifier m-auto text-primary"></i>
+              </div>
+              <h3>Análise de projeto</h3>
+              <p class="lead mb-0">Solicite a análise do seu projeto hidrossanitário ou de arquitetura</p>
             </div>
           </a>
           <a href="#" class="col-lg-4 card" style="text-decoration: none;">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                <div class="features-icons-icon d-flex">
-                  <i class="icon-layers m-auto text-primary"></i>
-                </div>
-              <h3>Consultas</h3>
-              <p class="lead mb-0">Faça suas consultas e forma fácil e rápida aqui</p>
+              <div class="features-icons-icon d-flex">
+                <i class="icon-people m-auto text-primary"></i>
+              </div>
+              <h3>Cadastros e alterações</h3>
+              <p class="lead mb-0">Faça a solicitação de cadastro na prefeitura ou alteração dos dados para você e sua empresa</p>
             </div>
           </a>
           <a href="#" class="col-lg-4 card" style="text-decoration: none;">
             <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-                <div class="features-icons-icon d-flex" >
-                  <i class="icon-check m-auto text-primary"></i>
-                </div>
-              <h3>Informações</h3>
-              <p class="lead mb-0">Obtenha informações sobre a cidade e sobre o que a prefeitura esta fazendo</p>
+              <div class="features-icons-icon d-flex">
+                <i class="icon-doc m-auto text-primary"></i>
+              </div>
+              <h3>NFA</h3>
+              <p class="lead mb-0">Faça a emissão da sua nota fiscal de serviço avulsa (NFA)</p>
             </div>
           </a>
         </div>
@@ -114,23 +114,6 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-            <!-- <ul class="list-inline mb-2">
-              <li class="list-inline-item">
-                <a href="#">About</a>
-              </li>
-              <li class="list-inline-item">&sdot;</li>
-              <li class="list-inline-item">
-                <a href="#">Contact</a>
-              </li>
-              <li class="list-inline-item">&sdot;</li>
-              <li class="list-inline-item">
-                <a href="#">Terms of Use</a>
-              </li>
-              <li class="list-inline-item">&sdot;</li>
-              <li class="list-inline-item">
-                <a href="#">Privacy Policy</a>
-              </li>
-            </ul> -->
             <p class="text-muted small mb-4 mb-lg-0">&copy; Website topzera 2018. All Rights Reserved.</p>
           </div>
           <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
@@ -162,4 +145,4 @@
 
   </body>
 
-</html>
+  </html>
