--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="features-icons bg-light text-center">
       <div class="container">
         <div class="row">
-          <a href="pages/solicitacao.html" class="col-lg-4 card" style="text-decoration: none;">
+          <a href="pages/solicitacoes.html" class="col-lg-4 card" style="text-decoration: none;">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                 <div class="features-icons-icon d-flex">
                   <i class="icon-screen-desktop m-auto text-primary"></i>
@@ -69,7 +69,7 @@
               <p class="lead mb-0">Faça suas consultas e forma fácil e rápida aqui</p>
             </div>
           </a>
-          <a href="pages/solicitacao.html" class="col-lg-4 card" style="text-decoration: none;">
+          <a href="" class="col-lg-4 card" style="text-decoration: none;">
             <div class="features-icons-item mx-auto mb-0 mb-lg-3">
                 <div class="features-icons-icon d-flex" >
                   <i class="icon-check m-auto text-primary"></i>
