--- a/pages/consultas.html
+++ b/pages/consultas.html
@@ -52,26 +52,26 @@
             <div class="features-icons-icon d-flex">
               <i class="icon-credit-card m-auto text-primary"></i>
             </div>
-            <h3>Certidão Negativa - Pessoa Física</h3>
-            <p class="lead mb-0">Consulte obras, alvarás e segunda via de documentos</p>
+            <h3>Certidão Negativa de débito</h3>
+            <p class="lead mb-0">Consulte sua regularidade com a Secretaria Municipal da Fazenda.</p>
           </div>
         </a>
         <a href="./negativa-debito.html" class="col-lg-4 card" style="text-decoration: none;">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-calculator m-auto text-primary"></i>
+              <i class="icon-camrecorder m-auto text-primary"></i>
             </div>
-            <h3>Consultas</h3>
-            <p class="lead mb-0">Faça suas consultas e forma fácil e rápida aqui</p>
+            <h3>Câmeras</h3>
+            <p class="lead mb-0">Veja as câmeras da cidade em tempo real</p>
           </div>
         </a>
         <a href="./negativa-debito.html" class="col-lg-4 card" style="text-decoration: none;">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-note m-auto text-primary"></i>
+              <i class="icon-trophy m-auto text-primary"></i>
             </div>
-            <h3>Informações</h3>
-            <p class="lead mb-0">Obtenha informações sobre a cidade e sobre o que a prefeitura esta fazendo</p>
+            <h3>Editais</h3>
+            <p class="lead mb-0">Obtenha informações sobre editais e como participar</p>
           </div>
         </a>
       </div>
@@ -81,28 +81,28 @@
         <a href="pages/solicitacao.html" class="col-lg-4 card" style="text-decoration: none;">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-pie-chart m-auto text-primary"></i>
+              <i class="icon-pin m-auto text-primary"></i>
             </div>
-            <h3>Solicitações</h3>
-            <p class="lead mb-0">Solicite obras, alvarás e segunda via de documentos</p>
+            <h3>Obras em andamento</h3>
+            <p class="lead mb-0">Veja as obras municipais e evite trânsito</p>
           </div>
         </a>
         <a href="./negativa-debito.html" class="col-lg-4 card" style="text-decoration: none;">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-docs m-auto text-primary"></i>
+              <i class="icon-event m-auto text-primary"></i>
             </div>
-            <h3>Consultas</h3>
-            <p class="lead mb-0">Faça suas consultas e forma fácil e rápida aqui</p>
+            <h3>Calendário</h3>
+            <p class="lead mb-0">Veja o calendário de eventos da PRefeitura na cidade</p>
           </div>
         </a>
         <a href="./negativa-debito.html" class="col-lg-4 card" style="text-decoration: none;">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-notebook m-auto text-primary"></i>
+              <i class="icon-clock m-auto text-primary"></i>
             </div>
-            <h3>Informações</h3>
-            <p class="lead mb-0">Obtenha informações sobre a cidade e sobre o que a prefeitura esta fazendo</p>
+            <h3>Horário de ônibus</h3>
+            <p class="lead mb-0">Consulte os horários de ônibus na cidade</p>
           </div>
         </a>
       </div>
