telas de pavimentação de rua terminadas

--- a/pages/pavimentacao-rua-2.html
+++ b/pages/pavimentacao-rua-2.html
@@ -64,38 +64,20 @@
       </div>
 
       <div class="a-little-breath float-left col-md-9">
-        <div class="col-md-9" style="margin:16px">
-
-            <h3>Insira seus dados</h3>
-            <form class="">
-              <div class ="row">
-                <label for="cpf" class="font-weight-bold">Nome: </label>
-                <input class="form-control"></input>
-              </div>
-
-              <div class ="row">
-                <label for="cpf" class="font-weight-bold">CPF:</label>
-                <input id="cpf" maxlength="14" type="text" class="form-control" placeholder="Digite apenas os 11 números" onblur="verificarCampo()"
-                  onkeyup="cpfMask()">
-                <span id="errorCpf" class="d-none text-danger">Campo vazio ou incorreto</span>
-              </div>
-
-              <div class ="row">
-                <label for="cpf" class="font-weight-bold">Descrição: </label>
-                <textarea rows="4" class="form-control"></textarea>
-              </div>
-
-              <div class ="">
-                <label class="font-weight-bold">Rua:</label>
-                <div class="map-icon" style="background-image: url('../img/map.png'); height: 400px; width: 100%;"></div>
-              </div>
-              <br>
-              <div align="right">
-                <a href="./pavimentacao-rua-2.html" class="btn btn-default btn-background text-uppercase" role="button"
-                style="background-color: #0056B3; color: #fff">Solicitar</a>
-              </div>
-
-          </form>
+        <div class="col-md-9" align="center" style="margin:16px">
+            <br><br>
+            <h3>Solicitação em andamento</h3>
+            <p>
+              Para completar sua solicitação, efetue o download
+              do abaixo-assinado fornecido abaixo e o entregue
+              na unidade do Pró-Cidadão mais próxima de você
+            </p>
+            <div align="center">
+              <a class="btn btn-default btn-background text-uppercase" role="button"
+                style="background-color: #0056B3; color: #fff">Baixar</a>
+              <a href="../index.html"class="btn btn-default btn-background text-uppercase" role="button"
+                style="background-color: #0056B3; color: #fff">Início</a>
+            </div>
 
         </div>
       </div>
