adicionado notícias e alterado o rodapé

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <p class="lead mb-0">Faça suas consultas e forma fácil e rápida aqui</p>
             </div>
           </a>
-          <a href="" class="col-lg-4 card" style="text-decoration: none;">
+          <a href="pages/informacoes.html" class="col-lg-4 card" style="text-decoration: none;">
             <div class="features-icons-item mx-auto mb-0 mb-lg-3">
                 <div class="features-icons-icon d-flex" >
                   <i class="icon-check m-auto text-primary"></i>
@@ -91,23 +91,25 @@
           </div>
 
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/administration-agreement-blur-261625.jpg');"></div>
-          <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>Fully Responsive Design</h2>
-            <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+          <div class="col-lg-6 order-lg-1 my-auto showcase-text" align="center">
+            <h2>Prefeitura de Florianópolis lança Escola da Inteligência </h2>
+            <p class="lead mb-0">
+              Uma das metas é a melhoria nos índices de aprendizagem
+            </p>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/beach-brazil-buildins.jpg');"></div>
-          <div class="col-lg-6 my-auto showcase-text">
-            <h2>Updated For Bootstrap 4</h2>
-            <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+          <div class="col-lg-6 my-auto showcase-text" align="center">
+            <h2>Carianos vai ganhar primeira Praça</h2>
+            <p class="lead mb-0">Ordem de serviço será dada neste sábado durante o Floripa em Movimento</p>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/Construction-1.jpg');"></div>
-          <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>Easy to Use &amp; Customize</h2>
-            <p class="lead mb-0 ">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+          <div class="col-lg-6 order-lg-1 my-auto showcase-text" align="center">
+            <h2>Prefeitura termina reforma da ponte</h2>
+            <p class="lead mb-0 ">A partir de semana que vem o transito será liberado para máquinas agrícolas e trens</p>
           </div>
         </div>
       </div>
@@ -172,7 +174,7 @@
                 <a href="#">Privacy Policy</a>
               </li>
             </ul> -->
-            <p class="text-muted small mb-4 mb-lg-0">&copy; Website topzera 2018. All Rights Reserved.</p>
+            <p class="text-muted small mb-4 mb-lg-0">&copy; PMF 2018. All Rights Reserved.</p>
           </div>
           <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
             <ul class="list-inline mb-0">
